--- a/aboly.html
+++ b/aboly.html
@@ -1210,7 +1210,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">谓</span>：评论，评说。句式“A谓B”的意思是A评论B，“A谓B曰”是A对B说。<span class="lyexample"><span>【例】</span><span><a href="#13.8" class="lyref">13.8</a> <span class="lyq">子谓卫公子荆善居室。</span><a href="#2.21" class="lyref">2.21</a> <span class="lyq">或谓孔子曰：“子奚不为政？”</span></span></span><a href="#9.21" class="lyref">9.21</a> <span class="lyq">子谓颜渊曰</span>是唯一的特例。</p></li>
 <li>
-<p><span class="lyterm">八佾（<span class="lypinyin">yì</span>）</span>：8×8人的舞蹈方阵。<span class="lyterm">佾</span>：乐舞的队列。<span class="lyexample"><span>【例】</span><span>《史记·秦本纪》载，秦穆公曾以<span class="lyq">女乐二八<a href="#wei4">遗</a><a href="#yidihuaxia">戎</a>王</span>，“二八”就是二佾。</span></span></p>
+<p><span class="lyterm">八佾（<span class="lypinyin">yì</span>）</span>：8×8人的舞蹈方阵。<span class="lyterm">佾</span>：乐舞的队列。<span class="lyexample"><span>【例】</span><span>《史记·秦本纪》载，<a href="#qinmugong">秦穆公</a>曾以<span class="lyq">女乐二八<a href="#wei4">遗</a><a href="#yidihuaxia">戎</a>王</span>，“二八”就是二佾。</span></span></p>
 <p>据《左传·隐公五年》，天子才可用八佾，诸侯用六佾，卿大夫用四佾，士用二佾。因为<a href="#zhougong">周公</a>的功德，鲁国也被特许使用八佾。季氏作为卿大夫而用八佾，是<a href="#zhengming">非分越礼</a>的。</p>
 <a id="jianyongbayi"></a><div class="lyseealso">
 <p><span>【参】</span><span>《左传·昭公二十五年》（前517年）：<span class="lyq">将<a href="#di4">禘</a>于襄公，万者二人，其众万于季氏。</span>（<a id="xianggong"></a>襄公：鲁襄公（前575年—前542年），名午，鲁国第22任国君，<a href="#zhaogong">鲁昭公</a>之父。万：一种大型乐舞。其众：指鲁公室八佾中的大多数舞师，他们去和季氏自有的四佾组成八佾了。<a id="jipingzi"></a>季氏：指当时的权臣、<a href="#jishi">季孙氏</a>第4任宗主季平子（季孙意如），他是<a href="#jihuanzi">季桓子</a>之父。）</span></p>
@@ -4363,7 +4363,7 @@ img.characterimg {
 <p><a id="zhengming"></a><span class="lyterm">正名</span>：端正名分，使名实相符，古注多解作<a href="#junchenfuzi">君臣父子</a>的正统关系。</p>
 <p>汉代尊儒，教化中强调名分地位的意义，“以名为教”，<a href="#14.26">不出其位</a>，用以维护等级秩序。魏晋起，称儒家礼教为<span class="lykeyword">名教</span>，按陈寅恪先生《金明馆丛稿初编·陶渊明之思想与清谈之关系》的解释，<span class="lyq">以名为教，即以官长君臣之义为教，亦即入世求仕者所宜奉行者也。其主张与崇尚自然即避世不仕者适相违反。</span><a id="jiancuanweijiao"></a>超越本分之举称为<span class="lykeyword"><a href="#jian4a">僭</a></span>，<a id="cuan4"></a>臣夺君位称为<span class="lykeyword">篡</span>（<span class="lypinyin">cuàn</span>），名实不符之物称为<span class="lykeyword">伪</span>，假托上命称为<span class="lykeyword">矫</span>，都是很忌讳的。</p>
 <div class="lyseealso">
-<p><span>【参】</span><span>《日知录·卷十三·名教》：<span class="lyq">《南史》有云：“汉世士务修身，故忠孝成俗；至于乘轩服冕，非此莫由。晋、宋以来，风衰义缺。”故昔人之言曰名教，曰名节，曰功名，不能使天下之人以义为利，而犹使之以名为利；虽非纯<a href="#wangdao">王</a>之风，<a href="#yi4d">亦</a>可以救积洿之俗矣。……故名胜于利，则小人之道消；利胜于名，则贪暴之风扇。……人不爱名，则圣人之<a href="#quan2">权</a>去矣。</span>（轩：大夫及以上所乘的车。乘轩服<a href="#mian3">冕</a>：指做大官，飞黄腾达。洿：通“污”。扇（<span class="lypinyin">shān</span>）：兴。）</span></p>
+<p><span>【参】</span><span>《韩非子·扬权》：<span class="lyq">用一之道，以名为首。名正物定，名倚物徙。</span>《日知录·卷十三·名教》：<span class="lyq">《南史》有云：“汉世士务修身，故忠孝成俗；至于乘轩服冕，非此莫由。晋、宋以来，风衰义缺。”故昔人之言曰名教，曰名节，曰功名，不能使天下之人以义为利，而犹使之以名为利；虽非纯<a href="#wangdao">王</a>之风，<a href="#yi4d">亦</a>可以救积洿之俗矣。……故名胜于利，则小人之道消；利胜于名，则贪暴之风扇。……人不爱名，则圣人之<a href="#quan2">权</a>去矣。</span>（轩：大夫及以上所乘的车。乘轩服<a href="#mian3">冕</a>：指做大官，飞黄腾达。洿：通“污”。扇（<span class="lypinyin">shān</span>）：兴。）</span></p>
 <p>《孔子家语》首篇《相鲁》开头，记述了孔子<a href="#qirenkuinvyue">初登政坛</a>的举措：<span class="lyq">孔子初仕，为中都宰。制为养生送死之节，长幼异食，强弱异任，男女别<a href="#tu2">涂</a>，路无拾遗，器不雕伪。为四寸之棺，五寸之<a href="#guo3">椁</a>，因丘陵为坟，不封不树。行之一年，而四方之诸侯<a href="#ze2">则</a>焉。</span>（不封不树：不积土起坟，不植树为念，指丧礼从简。）</p>
 </div>
 </li>
@@ -4384,7 +4384,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">稼</span>：种庄稼。<span class="lyterm">圃</span>（<span class="lypinyin">pǔ</span>）：种蔬菜。</p></li>
 <li><p><a id="xiaoren1"></a><span class="lyterm"><a href="#junzi">小人</a></span>：指志向小，胸怀抱负不大。<span class="lyseealso"><span>【参】</span><span><a href="#2.12" class="lyref">2.12</a> <span class="lyq">君子不器。</span>《礼记·乐记》：<span class="lyq">德成而上，艺成而下；行成而先，事成而后。</span></span></span></p></li>
-<li><p><span class="lyterm">用情</span>：指坦诚相待，不虚饰掩藏。<a id="qing2"></a><span class="lyterm">情</span>：诚实，与“伪”相对。<span class="lyexample"><span>【例】</span><span>“情伪”即真假，虚实。《鬼谷子·捭阖》：<span class="lyq">开而示之者，同其情也；阖而闭之者，异其诚也。</span>情、诚互文见义。</span></span></p></li>
+<li><p><span class="lyterm">用情</span>：指坦诚相待，不虚饰掩藏。<a id="qing2"></a><span class="lyterm">情</span>：诚实，与“伪”相对。<span class="lyexample"><span>【例】</span><span>“情伪”即真假，虚实。《鬼谷子·捭阖》：<span class="lyq">开而示之者，同其情也；阖而闭之者，异其诚也。</span>情、诚互文见义。《韩非子·扬权》：<span class="lyq">二者诚信，下乃贡情。</span>（二者：指赏罚。贡：献，付出。）</span></span></p></li>
 <li><p><span class="lyterm">襁</span>（<span class="lypinyin">qiǎng</span>）：背负婴儿用的宽带子。这一句体现了中国传统的<a href="#huairouyuanren">怀柔远人</a>的政治理念。<span class="lyseealso"><span>【参】</span><span><a href="#5.26" class="lyref">5.26</a> <a href="#13.16" class="lyref">13.16</a> </span></span></p></li>
 </ul></div>
 <div class="lyblobremark">
@@ -6031,10 +6031,13 @@ img.characterimg {
 <a id="18.4"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#18.4">18.4</a></div>
 <div class="lybloboriginaltext"><p>齐人归女乐，季桓子受之，三日不朝。孔子行。</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize">
+<div class="lyblobannotation">
+<ul class="lyblobitemize">
 <li><p><a id="qirenkuinvyue"></a><span class="lyterm">齐人归（<span class="lypinyin">kuì</span>）女乐</span>：指前498年（<a href="#dinggong">鲁定公</a>12年）冬，齐国为了惑乱鲁政而赠送定公女乐骏马一事。<span class="lyterm">归</span>：通“馈”。据《史记·孔子世家》，前501年，定公任用孔子为中都（在今山东省济宁市汶上县西，<a href="#wenshui">汶水</a>之南）宰，孔子当时已经51岁了。<a id="sikong"></a>后来升任司空（主管工程营建）、<a href="#sikou">司寇</a>，理政3月就使鲁国面貌一新。齐国认为孔子为政必使鲁国称雄，对接壤的齐国是重大威胁，应该遏止这个势头，<span class="lyq">于是选齐国中女子好者八十人，皆衣<a href="#wen2">文</a>衣而舞《康乐》，文马三十驷，遗鲁君，陈女乐文马于鲁城南高门外。</span>（好：美。<a id="wei4"></a>遗（<span class="lypinyin">wèi</span>）：赠送。）<a href="#jihuanzi">季桓子</a>先去替定公鉴赏了一番，又劝定公亲自观摩，最终收下了这些诱人的礼物。于是国政荒废，次年春的郊祭也敷衍了事，孔子无奈<a href="#13.9">去了卫国</a>。后来，<span class="lyq">桓子<a href="#kui4">喟</a>然叹曰：“夫子罪我以群婢故也夫！”</span>定公耽于女乐时可不知道，他的日子只剩下3年了。</p></li>
 <li><p><a id="jihuanzi"></a><span class="lyterm">季桓子</span>：季孙斯（？—前492年），<a href="#jishi">季孙氏</a>第5代宗主，谥号是桓（“壮以有力曰桓”），时任鲁国正卿。<a href="#jikangzi">季康子</a>是他的儿子，<a href="#yanghuo">阳货</a>曾任他的管家。</p></li>
-</ul></div>
+</ul>
+<p><span class="lyseealso"><span>【参】</span><span>《韩非子·十过》中第六过是<span class="lyq">耽于女乐，不顾国政</span>，所举史事与本章相似。<a href="#yidihuaxia">西戎</a>绵诸王听说邻国<a id="qinmugong"></a>秦穆公（前659年—前621年在位）贤能，就派大臣由余出访。穆公问：<span class="lyq">古之明主得国、失国何常以？</span>由余对以<span class="lyq">常以俭得之，以奢失之</span>，并历数<a href="#yao">尧</a>、<a href="#shun">舜</a>、<a href="#yu">禹</a>、<a href="#shangchao">殷</a>之成败。穆公赞叹之余，<span class="lyq">召内史廖而告之曰：“寡人闻邻国有圣人，敌国之忧也。今由余，圣人也，寡人患之，吾将奈何？”内史廖曰：“臣闻戎王之居，僻陋而道远，未闻中国之声。君其遗之女乐，以乱其政，而后为由余请期，以疏其谏。彼君臣有间，而后可图也。”君曰：“诺。”乃使史廖以女乐二八遗戎王，因为由余请期。戎王许诺，见其女乐而说之，设酒张饮，日以听乐，终岁不迁，牛马半死。由余归，因谏戎王。戎王弗听，由余遂去之秦。秦穆公迎而拜之上卿，问其兵势与其地形。既以得之，举兵而伐之，兼国十二，开地千里。</span>（请期：指请求延长出访时间。<a href="#jian4b">间</a>：隔阂，嫌隙。不迁：指不按游牧需要，移居到水草丰盛之地。）戎人民风朴实，入彀还情有可原，鲁国集周代礼乐之<a href="#jizhaguanyue">大观</a>，却有如此丑态，难怪孔子失望透顶了。亦见《吕氏春秋·不苟论·不苟》、《史记·秦本纪》等。</span></span></p>
+</div>
 </div>
 <a id="18.5"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#18.5">18.5</a></div>
