--- a/aboly.html
+++ b/aboly.html
@@ -929,7 +929,7 @@ img.characterimg {
 </ul>
 <div class="lyseealso">
 <p><span>【参】</span><span>《战国策》刘向书录引用本章来批评秦政之弊：<span class="lyq">任刑罚以为治，信小术以为道。……惠不下施，情不上达，君臣相疑，骨肉相疏，化道浅薄，纲纪坏败，民不见义而悬于不宁。抚天下十四岁，天下大溃，诈伪之弊也。其比<a href="#wangdao">王</a>德，岂不远哉！孔子曰：“……”夫使天下有所耻，故化可<a href="#zhi4b">致</a>也。<a href="#gou3a">苟</a>以诈伪偷活取容，自上为之，何以率下？秦之败也，不亦宜乎！</span>（<a id="hua4"></a>化：教化，引申为大治。抚：据有。<a id="tou1"></a>偷：苟且，萎靡怠惰。）</span></p>
-<p>有耻不仅是良民的标杆。《新五代史·冯道传》开篇说：<span class="lyq">“<a href="#li3">礼</a><a href="#yi4">义</a><a href="#lian2">廉</a>耻，国之四维；四维不张，国乃灭亡。”善乎管生之能言也！礼义，治人之大法；廉耻，立人之<a href="#dajie">大节</a>。盖不廉则无所不取，不耻则无所不为。人而如此，则祸败乱亡，亦无所不至；况为大臣而无所不取、无所不为，则天下其有不乱、国家其有不亡者乎！”</span>顾炎武《日知录·卷十三·廉耻》进而认为：<span class="lyq">然而四者之中，耻尤为要。故夫子之论士曰：“<a href="#13.20">行己有耻</a>”。……士大夫之无耻，是谓国耻。</span>（管生：指<a href="#guanzhong">管仲</a>，引言出自《管子·牧民》。冯道：五代能臣，历事五姓十君，为卿相近30年，与世浮沉，矫行取誉，自以为荣。）</p>
+<p>有耻不仅是“民”的标杆。《新五代史·冯道传》开篇说：<span class="lyq">“<a href="#li3">礼</a><a href="#yi4">义</a><a href="#lian2">廉</a>耻，国之四维；四维不张，国乃灭亡。”善乎管生之能言也！礼义，治人之大法；廉耻，立人之<a href="#dajie">大节</a>。盖不廉则无所不取，不耻则无所不为。人而如此，则祸败乱亡，亦无所不至；况为大臣而无所不取、无所不为，则天下其有不乱、国家其有不亡者乎！”</span>（冯道：五代能臣，历事五姓十君，为卿相近30年，与世浮沉，矫行取誉，自以为荣。管生：指<a href="#guanzhong">管仲</a>，引言出自《管子·牧民》。）大臣无耻，<a href="#4.12" class="lyref">4.12</a> <span class="lyq">放于利而行</span>，就会像《韩非子·孤愤》说的，产生<span class="lyq">臣、主之利与相异</span>的弊病（不妨把“主”推广为全社会）：<span class="lyq">主利在有能而任官，臣利在无能而得事；主利在有劳而爵禄，臣利在无功而富贵；主利在豪杰使能，臣利在朋党用私。</span>所以顾炎武《日知录·卷十三·廉耻》认为：<span class="lyq">四者之中，耻尤为要。故夫子之论士曰：“<a href="#13.20">行己有耻</a>”。……士大夫之无耻，是谓国耻。</span></p>
 </div>
 </div>
 </div>
@@ -5662,7 +5662,10 @@ img.characterimg {
 <p><span class="lyterm">归</span>：通“馈”，赠送。<span class="lyterm">豚</span>：整只乳猪。“蒸豚”是《孟子·滕文公下》对此事的说法。</p>
 </li>
 <li><p><span class="lyterm">时（<span class="lypinyin">sì</span>）其亡也</span>：等到他（阳货）出门以后。<span class="lyterm">时</span>：通“伺”，本义为窥察，引申为等候。<span class="lyterm">亡</span>：本义为逃跑，引申为外出，出门。</p></li>
-<li><p><a id="tu2"></a><span class="lyterm">涂</span>：通“途”，道路，指阳货回家的路上。有认为从“谓孔子曰”到“孔子曰”之前，都是阳货自问自答的话，似有抬高孔子身份之嫌，这里不取。</p></li>
+<li>
+<p><a id="tu2"></a><span class="lyterm">涂</span>：通“途”，道路，指阳货回家的路上。<span class="lyexample"><span>【例】</span><span>《韩非子·孤愤》中的<span class="lyq">当涂之人</span>，字面上是当道之人，意即掌握重权者。</span></span></p>
+<p>有认为从“谓孔子曰”到“孔子曰”之前，都是阳货自问自答的话，似有抬高孔子身份之嫌，这里不取。</p>
+</li>
 <li><p><span class="lyterm">怀其宝而迷其邦</span>：身怀治国安邦的高才绝学，却在自己国内找不到方向（没有用武之地）。<span class="lyterm">迷其邦</span>：即迷于其邦。<span class="lyterm">迷</span>：迷路，不辨方向。动词“迷”不带宾语，省略了介词“于”。<span class="lyexample"><span>【例】</span><span>《史记·五帝本纪》：<span class="lyq"><a href="#shun">舜</a>耕历山，渔雷泽，陶河滨，作什器于寿丘，就时于负夏。</span>（每个停顿的后两个字都是地名，前3处均省略了介词“于”。什（<span class="lypinyin">shí</span>）器：日常生活用具。就时：趁时，指看行情做生意。）</span></span><span class="lyseealso"><span>【参】</span><span>《韩非子·解老》：<span class="lyq">凡失其所欲之路而妄行者之谓迷，迷则不能至于所欲至矣。</span>这里对“迷其邦”的解释与各家不同，他们大都把“其邦”视为“迷”的直接宾语，解释为使国家迷乱失序，似乎又拔高了孔子当时的身份，早至《<a href="#huaibaojueji">韩诗外传</a>》就已受其影响。</span></span></p></li>
 <li><p><span class="lyterm">好从事而亟（<span class="lypinyin">qì</span>）失时</span>：热心于政治却屡屡错失机会。<a id="qi4a"></a><span class="lyterm">亟</span>：屡次，一再。</p></li>
 <li><p><span class="lyterm">岁不我与</span>：“<a href="#nov">岁不与我</a>”的倒装。这是阳货鼓动孔子为自己效力，催他表态的话。<span class="lyterm">与</span>：等待，这是从帮助、许可的意义引申来的，主语是<span class="lyterm">岁</span>（时间，岁月）。后有成语“时不我与”。</p></li>
@@ -6036,7 +6039,7 @@ img.characterimg {
 <li><p><a id="qirenkuinvyue"></a><span class="lyterm">齐人归（<span class="lypinyin">kuì</span>）女乐</span>：指前498年（<a href="#dinggong">鲁定公</a>12年）冬，齐国为了惑乱鲁政而赠送定公女乐骏马一事。<span class="lyterm">归</span>：通“馈”。据《史记·孔子世家》，前501年，定公任用孔子为中都（在今山东省济宁市汶上县西，<a href="#wenshui">汶水</a>之南）宰，孔子当时已经51岁了。<a id="sikong"></a>后来升任司空（主管工程营建）、<a href="#sikou">司寇</a>，理政3月就使鲁国面貌一新。齐国认为孔子为政必使鲁国称雄，对接壤的齐国是重大威胁，应该遏止这个势头，<span class="lyq">于是选齐国中女子好者八十人，皆衣<a href="#wen2">文</a>衣而舞《康乐》，文马三十驷，遗鲁君，陈女乐文马于鲁城南高门外。</span>（好：美。<a id="wei4"></a>遗（<span class="lypinyin">wèi</span>）：赠送。）<a href="#jihuanzi">季桓子</a>先去替定公鉴赏了一番，又劝定公亲自观摩，最终收下了这些诱人的礼物。于是国政荒废，次年春的郊祭也敷衍了事，孔子无奈<a href="#13.9">去了卫国</a>。后来，<span class="lyq">桓子<a href="#kui4">喟</a>然叹曰：“夫子罪我以群婢故也夫！”</span>定公耽于女乐时可不知道，他的日子只剩下3年了。</p></li>
 <li><p><a id="jihuanzi"></a><span class="lyterm">季桓子</span>：季孙斯（？—前492年），<a href="#jishi">季孙氏</a>第5代宗主，谥号是桓（“壮以有力曰桓”），时任鲁国正卿。<a href="#jikangzi">季康子</a>是他的儿子，<a href="#yanghuo">阳货</a>曾任他的管家。</p></li>
 </ul>
-<p><span class="lyseealso"><span>【参】</span><span>《韩非子·十过》中第六过是<span class="lyq">耽于女乐，不顾国政</span>，所举史事与本章相似。<a href="#yidihuaxia">西戎</a>绵诸王听说邻国<a id="qinmugong"></a>秦穆公（前659年—前621年在位）贤能，就派大臣由余出访。穆公问：<span class="lyq">古之明主得国、失国何常以？</span>由余对以<span class="lyq">常以俭得之，以奢失之</span>，并历数<a href="#yao">尧</a>、<a href="#shun">舜</a>、<a href="#yu">禹</a>、<a href="#shangchao">殷</a>之成败。穆公赞叹之余，<span class="lyq">召内史廖而告之曰：“寡人闻邻国有圣人，敌国之忧也。今由余，圣人也，寡人患之，吾将奈何？”内史廖曰：“臣闻戎王之居，僻陋而道远，未闻中国之声。君其遗之女乐，以乱其政，而后为由余请期，以疏其谏。彼君臣有间，而后可图也。”君曰：“诺。”乃使史廖以女乐二八遗戎王，因为由余请期。戎王许诺，见其女乐而说之，设酒张饮，日以听乐，终岁不迁，牛马半死。由余归，因谏戎王。戎王弗听，由余遂去之秦。秦穆公迎而拜之上卿，问其兵势与其地形。既以得之，举兵而伐之，兼国十二，开地千里。</span>（请期：指请求延长出访时间。<a href="#jian4b">间</a>：隔阂，嫌隙。不迁：指不按游牧需要，移居到水草丰盛之地。）戎人民风朴实，入彀还情有可原，鲁国集周代礼乐之<a href="#jizhaguanyue">大观</a>，却有如此丑态，难怪孔子失望透顶了。亦见《吕氏春秋·不苟论·不苟》、《史记·秦本纪》等。</span></span></p>
+<p><span class="lyseealso"><span>【参】</span><span>《韩非子·十过》中第六过是<span class="lyq">耽于女乐，不顾国政</span>，所举史事与本章相似。<a href="#yidihuaxia">西戎</a>绵诸王听说邻国<a id="qinmugong"></a>秦穆公（前659年—前621年在位，春秋五霸之一）贤能，就派大臣由余出访。穆公问：<span class="lyq">古之明主得国、失国何常以？</span>由余对以<span class="lyq">常以俭得之，以奢失之</span>，并历数<a href="#yao">尧</a>、<a href="#shun">舜</a>、<a href="#yu">禹</a>、<a href="#shangchao">殷</a>之成败。穆公赞叹之余，<span class="lyq">召内史廖而告之曰：“寡人闻邻国有圣人，敌国之忧也。今由余，圣人也，寡人患之，吾将奈何？”内史廖曰：“臣闻戎王之居，僻陋而道远，未闻中国之声。君其遗之女乐，以乱其政，而后为由余请期，以疏其谏。彼君臣有间，而后可图也。”君曰：“诺。”乃使史廖以女乐二八遗戎王，因为由余请期。戎王许诺，见其女乐而说之，设酒张饮，日以听乐，终岁不迁，牛马半死。由余归，因谏戎王。戎王弗听，由余遂去之秦。秦穆公迎而拜之上卿，问其兵势与其地形。既以得之，举兵而伐之，兼国十二，开地千里。</span>（请期：指请求延长出访时间。<a href="#jian4b">间</a>：隔阂，嫌隙。不迁：指不按游牧需要，移居到水草丰盛之地。）戎人民风朴实，入彀还情有可原，鲁国集周代礼乐之<a href="#jizhaguanyue">大观</a>，却有如此丑态，难怪孔子失望透顶了。亦见《吕氏春秋·不苟论·不苟》、《史记·秦本纪》等。</span></span></p>
 </div>
 </div>
 <a id="18.5"></a><div class="lyblob">
