--- a/aboly.html
+++ b/aboly.html
@@ -924,12 +924,15 @@ img.characterimg {
 <li><p><span class="lyterm">政</span>：禁令，法规。</p></li>
 <li><p><a id="qi2b"></a><span class="lyterm">齐</span>：使整齐一致，引申为整治，管束。《说文解字》解释其本义为：<span class="lyq">禾麦吐穗上平也，象形。</span><span class="lyexample"><span>【例】</span><span>法家大成之作《韩非子·八经》说：<span class="lyq">设法度以齐民，信赏罚以尽民能。</span>另外，“齐民”还可以作名词，表示平民，齐就是同等。例如北魏贾思勰的农业技术名著《齐民要术》，命名就有双关之意。</span></span></p></li>
 <li><p><span class="lyterm">免</span>：指免于犯罪。后文还有 <a href="#6.16" class="lyref">6.16</a> <span class="lyq">免于今之世</span>，<a href="#6.19" class="lyref">6.19</a> <span class="lyq">罔之生也幸而免</span>，<a href="#8.3" class="lyref">8.3</a> <span class="lyq">吾知免夫</span>，都要根据上下文具体解读。<span class="lyseealso"><span>【参】</span><span>《史记·酷吏列传》：<span class="lyq">法令者治之具，而非制治清浊之源也。</span>（具：工具，手段。）</span></span></p></li>
-<li><p><a id="chi3a"></a><span class="lyterm">耻</span>：羞惭心，耻辱感。其本字为“恥”，会意为心中羞惭使耳朵赤热。<span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq">好学近乎知，力行近乎仁，知耻近乎勇。知斯三者，则知所以<a href="#xiushen">修身</a>；知所以修身，则知所以治人；知所以治人，则知所以治天下国家矣。</span></span></span></p></li>
+<li>
+<p><a id="chi3a"></a><span class="lyterm">耻</span>：羞惭心，耻辱感。其本字为“恥”，会意为心中羞惭使耳朵赤热。<span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq">好学近乎知，力行近乎仁，知耻近乎勇。知斯三者，则知所以<a href="#xiushen">修身</a>；知所以修身，则知所以治人；知所以治人，则知所以治天下国家矣。</span></span></span></p>
+<p>“耻”在 <a href="#1.13" class="lyref">1.13</a> <span class="lyq">远耻辱也</span>里是蒙受羞辱之事，在“无耻”、“有耻”里则是做人的品质，相当于远耻辱之心。现代汉语中，无耻比有耻常用得多，是对人的品行很严厉的斥责。思考：英语口语的 what a shame，与 <a href="#8.13" class="lyref">8.13</a> <a href="#14.1" class="lyref">14.1</a>  中的<span class="lyq">耻也</span>含义相同吗？</p>
+</li>
 <li><p><span class="lyterm">格</span>：纠正。<span class="lyexample"><span>【例】</span><span>《尚书·周书·冏命》（伪）：<span class="lyq"><a href="#sheng2a">绳</a><a href="#qian1">愆</a>纠谬，格其非心。</span>（非心：邪<a href="#pi4">僻</a>之心。）</span></span><span class="lyseealso"><span>【参】</span><span>《孟子·尽心上》：<span class="lyq">善政不如善教之得民也。善政民畏之，善教民爱之。善政得民财，善教得民心。</span></span></span></p></li>
 </ul>
 <div class="lyseealso">
 <p><span>【参】</span><span>《战国策》刘向书录引用本章来批评秦政之弊：<span class="lyq">任刑罚以为治，信小术以为道。……惠不下施，情不上达，君臣相疑，骨肉相疏，化道浅薄，纲纪坏败，民不见义而悬于不宁。抚天下十四岁，天下大溃，诈伪之弊也。其比<a href="#wangdao">王</a>德，岂不远哉！孔子曰：“……”夫使天下有所耻，故化可<a href="#zhi4b">致</a>也。<a href="#gou3a">苟</a>以诈伪偷活取容，自上为之，何以率下？秦之败也，不亦宜乎！</span>（<a id="hua4"></a>化：教化，引申为大治。抚：据有。<a id="tou1"></a>偷：苟且，萎靡怠惰。）</span></p>
-<p>有耻不仅是“民”的标杆。《新五代史·冯道传》开篇说：<span class="lyq">“<a href="#li3">礼</a><a href="#yi4">义</a><a href="#lian2">廉</a>耻，国之四维；四维不张，国乃灭亡。”善乎管生之能言也！礼义，治人之大法；廉耻，立人之<a href="#dajie">大节</a>。盖不廉则无所不取，不耻则无所不为。人而如此，则祸败乱亡，亦无所不至；况为大臣而无所不取、无所不为，则天下其有不乱、国家其有不亡者乎！”</span>（冯道：五代能臣，历事五姓十君，为卿相近30年，与世浮沉，矫行取誉，自以为荣。管生：指<a href="#guanzhong">管仲</a>，引言出自《管子·牧民》。）大臣无耻，<a href="#4.12" class="lyref">4.12</a> <span class="lyq">放于利而行</span>，就会像《韩非子·孤愤》说的，产生<span class="lyq">臣、主之利与相异</span>的弊病（不妨把“主”推广为全社会）：<span class="lyq">主利在有能而任官，臣利在无能而得事；主利在有劳而爵禄，臣利在无功而富贵；主利在豪杰使能，臣利在朋党用私。</span>所以顾炎武《日知录·卷十三·廉耻》认为：<span class="lyq">四者之中，耻尤为要。故夫子之论士曰：“<a href="#13.20">行己有耻</a>”。……士大夫之无耻，是谓国耻。</span></p>
+<p>有耻不仅是“民”的标杆。《新五代史·冯道传》开篇说：<span class="lyq">“<a href="#li3">礼</a><a href="#yi4">义</a><a href="#lian2">廉</a>耻，国之四维；四维不张，国乃灭亡。”善乎管生之能言也！礼义，治人之大法；廉耻，立人之<a href="#dajie">大节</a>。盖不廉则无所不取，不耻则无所不为。人而如此，则祸败乱亡，亦无所不至；况为大臣而无所不取、无所不为，则天下其有不乱、国家其有不亡者乎！”</span>（冯道：五代能臣，历事五姓十君，为卿相近30年，与世浮沉，矫行取誉，自以为荣。管生：指<a href="#guanzhong">管仲</a>，引言出自《管子·牧民》。）大臣无耻，则名为公仆，实谋私利，<a href="#4.12" class="lyref">4.12</a> <span class="lyq">放于利而行</span>，就会像《韩非子·孤愤》所言，产生<span class="lyq">臣、主之利与相异</span>的弊病（不妨把“主”扩展为全社会）：<span class="lyq">主利在有能而任官，臣利在无能而得事；主利在有劳而爵禄，臣利在无功而富贵；主利在豪杰使能，臣利在朋党用私。</span>所以顾炎武《日知录·卷十三·廉耻》认为：<span class="lyq">四者之中，耻尤为要。故夫子之论士曰：“<a href="#13.20">行己有耻</a>”。……士大夫之无耻，是谓国耻。</span></p>
 </div>
 </div>
 </div>
@@ -2777,7 +2780,7 @@ img.characterimg {
 <li>
 <p><span class="lyterm">昭公</span>和后面的<span class="lyterm">君</span>，都是指鲁昭公。只从少年时代算起，昭公是孔子亲历的首位鲁君，孔子在陈时昭公已经去世，他的回答是<a href="#weizunzhehui">为尊者讳</a>。 </p>
 <p><a id="zhaogong"></a>鲁昭公（约前560年—前510年，前542年—前517年在位），名裯（<span class="lypinyin">chóu</span>），鲁国第24任国君，<a href="#xianggong">鲁襄公</a>之子，<a href="#dinggong">鲁定公</a>之兄。在他任内国政始终由<a href="#sanhuan">三桓</a>把持，加上<a href="#sifengongshi">四分公室</a>、<a href="#jianyongbayi">僭用八佾</a>等逆行，前517年（《左传·昭公二十五年》）他终于下决心讨伐<a href="#jishi">季氏</a>（当时是<a href="#jipingzi">季平子</a>在位），反遭三桓联合一击而溃，流亡齐晋7年，复国无门，郁郁而终。</p>
-<p><a id="shimo"></a><span class="lyseealso"><span>【参】</span><span>《左传·昭公三十二年》载，昭公去世后，晋大夫赵简子询问大夫史墨：<span class="lyq">“季氏出其君，而民服焉，诸侯与之；君死于外，而莫之或罪也？”</span>史墨答：<span class="lyq">“……王有公，诸侯有卿，皆有贰也。天生季氏，以贰鲁侯，为日久矣，民之服焉，不亦宜乎？鲁君世从其失，季氏世修其勤，民忘君矣。虽死于外，其谁<a href="#jin1a">矜</a>之？<a href="#sheji">社稷</a>无常奉，君臣无常位，自古以然。……〔<a href="#jiyou">季友</a>〕继而有大功于鲁，受费以为上卿。至于<a href="#jiwenzi">文子</a>、<a href="#jiwuzi">武子</a>，世增其业，不废旧绩。鲁文公<a href="#hong1">薨</a>，而<a href="#dongmensui">东门遂</a>杀适立庶，鲁君于是乎失国，政在季氏，于此君也，四公矣。民不知君，何以得国？是以为君慎器与<a href="#zhengming">名</a>，不可以假人。”</span>（贰：副，既有佐助又有备用之意。<a id="zhongqi"></a>器：传国重器，即钟鼎玉器之类的国宝，喻指政权。假：借。）</span></span></p>
+<p><a id="shimo"></a><span class="lyseealso"><span>【参】</span><span>《左传·昭公三十二年》载，昭公去世后，晋大夫赵简子询问大夫史墨：<span class="lyq">“季氏出其君，而民服焉，诸侯与之；君死于外，而莫之或罪也？”</span>史墨答：<span class="lyq">“……王有公，诸侯有卿，皆有贰也。天生季氏，以贰鲁侯，为日久矣，民之服焉，不亦宜乎？鲁君世从其失，季氏世修其勤，民忘君矣。虽死于外，其谁<a href="#jin1a">矜</a>之？<a href="#sheji">社稷</a>无常奉，君臣无常位，自古以然。……〔<a href="#jiyou">季友</a>〕继而有大功于鲁，受费以为上卿。至于<a href="#jiwenzi">文子</a>、<a href="#jiwuzi">武子</a>，世增其业，不废旧绩。鲁文公<a href="#hong1">薨</a>，而<a href="#dongmensui">东门遂</a>杀适立庶，鲁君于是乎失国，政在季氏，于此君也，四公矣。民不知君，何以得国？是以为君慎器与<a href="#zhengming">名</a>，不可以假人。”</span>（贰：副，既有佐助又有备用之意。<a id="zhongqi"></a>器：传国重器，即钟鼎玉器之类的国宝，比喻政权。假：借（给）。）</span></span>36年后，齐国又有 <a href="#14.21" class="lyref">14.21</a> <span class="lyq">陈成子弑简公</span>。</p>
 </li>
 <li><p><span class="lyterm">揖巫马期而进之，曰</span>的主语是陈司败。<span class="lyterm">进</span>：走上前，与<a href="#tui4">退</a>相反，这里是使动用法，请巫马期走过来。</p></li>
 <li><p><a id="dang3b"></a><span class="lyterm"><a href="#dang3a">党</a></span>：动词，结党（营私），拉帮结派，这里指偏私，袒护。其名词义是因为共同的利益诉求而结成的集团。<span class="lyexample"><span>【例】</span><span><a href="#15.22" class="lyref">15.22</a> <span class="lyq">群而不党。</span>成语“党同伐异”。</span></span><span class="lyseealso"><span>【参】</span><span>《国语·晋语五》载，赵宣子推荐韩献子为司马，在河曲之役中，赵宣子的属下驾车扰乱部队行列，被韩献子依律处死。<span class="lyq">宣子召而礼之曰：“吾闻事君者比而不党。夫周以举义，比也；举以其私，党也。夫军事无犯，犯而不隐，义也。吾言女于君，惧女不能也。举而不能，党孰大焉？事君而党，吾何以从政？吾故以是观女。女勉之！”</span>（周：忠信。<a href="#bi3">比</a>：指正当的亲近。）</span></span></p></li>
@@ -3739,10 +3742,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#11.1">11.1</a></div>
 <div class="lybloboriginaltext"><p>子曰：“先进于礼乐，野人也；后进于礼乐，君子也。如用之，则吾从先进。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li>
-<p><span class="lyterm">先进于礼乐</span>：指先学好了礼乐，再去做官。<a href="#daren">君子</a>大人则可以捷足先登。</p>
-<p>先进、后进难以确解，众说纷纭，这里采用<a href="#lunyuyizhu">杨伯峻</a>先生的观点。</p>
-</li>
+<li><p><span class="lyterm">先进于礼乐</span>：指先学好了礼乐，再去做官。<a href="#daren">君子</a>大人则可以捷足先登。先进、后进难以确解，众说纷纭，这里暂采用<a href="#lunyuyizhu">杨伯峻</a>先生的观点。</p></li>
 <li>
 <p><a id="yeren"></a><span class="lyterm">野人</span>：乡野之人，引申为平民，没有官职俸禄的人。</p>
 <p><a id="ye3"></a><span class="lyterm">野</span>：郊外，远离城邑的乡村。按《周礼·春官宗伯·肆师》郑玄注，城外50 <a href="#li3b">里</a>为近郊，100里为远郊，郊之外即为野。</p>
@@ -4754,12 +4754,9 @@ img.characterimg {
 </ol>
 </div>
 </li>
-<li><p><span class="lyterm">老</span>：即家老，家臣中有资历威望的长者。可作比较的是，孔子晚年自卫返鲁后，在鲁国的身份就是国老，不掌实权而名位隆重，相当于政府资深顾问。前484年季康子欲<a href="#jingtianzhi">改口赋为田赋</a>，极希望得到孔子支持，冉求甚至说出了<span class="lyq">待子而行</span>的话。</p></li>
+<li><p><span class="lyterm">老</span>：即家老，家臣中有资历威望的长者。可作比较的是，孔子晚年自卫返鲁后，在鲁国的身份就是国老，不掌实权而名位隆重，相当于政府资深顾问。前484年季康子欲<a href="#jingtianzhi">改口赋为田赋</a>，极愿得到孔子支持，冉求甚至说出了<span class="lyq">待子而行</span>的话。</p></li>
 <li><p><a id="you1"></a><span class="lyterm">优</span>：本义为充足，丰饶，引申为行有余力。<span class="lyexample"><span>【例】</span><span><a href="#19.13" class="lyref">19.13</a> <span class="lyq">仕而优则学，学而优则仕。</span></span></span></p></li>
-<li>
-<p><span class="lyterm">滕（<span class="lypinyin">téng</span>）、薛</span>：当时的两个小国，都在今山东省滕州市一带。孔子这样评价，是因为孟公绰德高足以服众，廉静难耐小国大夫的繁剧之事，应该用人以才。</p>
-<p>现代社会分工细化，想要样样精通可能只会一事无成，更应该找准自己的定位。</p>
-</li>
+<li><p><span class="lyterm">滕（<span class="lypinyin">téng</span>）、薛</span>：当时的两个小国，都在今山东省滕州市一带。孔子这样评价，是因为孟公绰德高足以服众，廉静难耐小国大夫的繁剧之事，应该用人以才。现代社会分工细化，想要样样在行可能只会一事无成，更应该找准定位。</p></li>
 </ul></div>
 </div>
 <a id="14.12"></a><div class="lyblob">
@@ -4883,12 +4880,9 @@ img.characterimg {
 <li><p> 前481年，田恒发动政变除掉阚止，囚简公于徐州，不久又害死简公，立其弟为<span class="lykeyword">平公</span>，得以专擅齐政。田恒担心别国前来征讨，就把侵占鲁国、卫国的土地尽数归还，遣使与各国通好，修功行赏，亲附百姓。</p></li>
 <li><p> 自此，田氏专权于齐国平、宣、康三代。前391年，田恒的重孙<span class="lykeyword">田和</span>流放了<span class="lykeyword">齐康公</span>，自立为齐国之君。这时的周王室暗弱无力，居然在前386年册封他为齐侯。<a href="#zhouchao">周朝</a>开国元勋<a href="#jiangtaigong">吕尚</a>建立的<span class="lykeyword">姜齐</span>，于是被<span class="lykeyword">田齐</span>完全取代了。</p></li>
 </ol>
-<p><span class="lyseealso"><span>【参】</span><span>《周易·坤·文言》：<span class="lyq">积善之家，必有余庆；积不善之家，必有余殃。臣弑其君、子弑其父，非一朝一夕之故，其所由来者渐矣！</span>《史记·六国年表》：<span class="lyq">及田常杀简公而相齐国，诸侯晏然弗讨，海内争于战功矣。<a href="#sanjiafenjin">三国</a>终之卒分晋，田和亦灭齐而有之，六国之盛自此始。务在强兵并敌，谋诈用而<a href="#zonghengjia">从横</a>短长之说起。</span>（晏：安定。）<a id="quqie"></a>《庄子·胠箧》：<span class="lyq">田成子有乎盗贼之名，而身处尧舜之安，小国不敢非，大国不敢诛，十二世有齐国。……彼窃钩者诛，窃国者为诸侯，诸侯之门而仁义存焉。</span>（胠（<span class="lypinyin">qū</span>）：从旁撬开。箧（<span class="lypinyin">qiè</span>）：小箱。尧舜之安是讽刺话。末句是说，身居诸侯之高位自会有仁义之美名。）</span></span></p>
+<p><span class="lyseealso"><span>【参】</span><span>《周易·坤·文言》：<span class="lyq">积善之家，必有余庆；积不善之家，必有余殃。臣弑其君、子弑其父，非一朝一夕之故，其所由来者渐矣！</span>《韩非子·奸劫弑臣》认为：<span class="lyq">以私为重人者众，而以法事君者少矣。是以主孤于上而臣成党于下，此田成之所以弑简公也。</span>（重人：权贵。）类似的观点也见 <a href="#7.31" class="lyref">7.31</a> <a href="#shimo">所引</a>赵简子与史墨的对话。《史记·六国年表》感叹：<span class="lyq">及田常杀简公而相齐国，诸侯晏然弗讨，海内争于战功矣。<a href="#sanjiafenjin">三国</a>终之卒分晋，田和亦灭齐而有之，六国之盛自此始。务在强兵并敌，谋诈用而<a href="#zonghengjia">从横</a>短长之说起。</span>（晏：安定。）<a id="quqie"></a>《庄子·胠箧》讽刺地说：<span class="lyq">田成子有乎盗贼之名，而身处尧舜之安，小国不敢非，大国不敢诛，十二世有齐国。……彼窃钩者诛，窃国者为诸侯，诸侯之门而仁义存焉。</span>（胠（<span class="lypinyin">qū</span>）：从旁撬开。箧（<span class="lypinyin">qiè</span>）：小箱。尧舜之安是反话。末句是说，身居诸侯之高位自会收获仁义的美名。）</span></span></p>
 </li>
-<li>
-<p><span class="lyterm">讨</span>：出兵攻打，讨伐。其本义为用言语训治，所以侧重于先历数罪状（声讨）然后攻打。</p>
-<p>相应地，<a href="#16.1" class="lyref">16.1</a>  的<span class="lykeyword">伐</span>，侧重于大张旗鼓地攻击。<span class="lyseealso"><span>【参】</span><span>《左传·庄公二十九年》：<span class="lyq">凡师，有钟鼓曰“伐”，无曰“侵”，轻曰“袭”。</span></span></span></p>
-</li>
+<li><p><span class="lyterm">讨</span>：出兵攻打，讨伐。其本义为用言语训治，所以侧重于攻打前先历数罪状（声讨）。而 <a href="#16.1" class="lyref">16.1</a>  的<span class="lykeyword">伐</span>，侧重于大张旗鼓、声势逼人。<span class="lyseealso"><span>【参】</span><span>《左传·庄公二十九年》：<span class="lyq">凡师，有钟鼓曰“伐”，无曰“侵”，轻曰“袭”。</span></span></span></p></li>
 <li>
 <p><span class="lyterm">“告<a href="#fu2b">夫</a>三子”者</span>。<a id="sanzi"></a><span class="lyterm">三子</span>指<a href="#sanhuan">三桓</a>的宗主，他们是当时鲁国真正的掌权人物。<span class="lyterm">者</span>：句末语气词，可以表示感叹、祈使、反问、推测等。这句话包含了孔子愤激的心情。<span class="lyexample"><span>【例】</span><span>《史记·项羽本纪》：<span class="lyq">富贵不归故乡，如衣绣夜行，谁知之者！</span></span></span></p>
 <p>弱鲁难讨强齐，孔子出于大义不得不告，并认为未必不堪一战：<span class="lyq">陈恒弑其君，民之不<a href="#yu3a">与</a>者半。以鲁之众，加齐之半，可克也。</span>（《左传·哀公十四年》。）但按孔子的主张，三桓是讨不到实利的，且也早有不臣之心，当然会置若罔闻了。</p>
