--- a/aboly.html
+++ b/aboly.html
@@ -559,7 +559,7 @@ img.characterimg {
 <p>学习的目的，有求禄，有求知，有修身。孔子之学，学为<a href="#junzi">君子</a>，生活修身不分离，理论实践不偏废。<span class="lyseealso"><span>【参】</span><span><a href="#2.18" class="lyref">2.18</a> <a href="#7.20" class="lyref">7.20</a> <a href="#6.3" class="lyref">6.3</a> <a href="#4.5" class="lyref">4.5</a> <a href="#13.5" class="lyref">13.5</a> 。<a id="xuezuozhenren"></a>教育家陶行知（1891—1946）说：<span class="lyq">千教万教，教人求真；千学万学，学做真人。</span></span></span></p>
 </li>
 <li>
-<p><span class="lyterm">不亦（<span class="lypinyin">yì</span>）说（<span class="lypinyin">yuè</span>）乎</span>。<span class="lyterm">说</span>：通“悦”，快乐，喜悦。《论语》中所有的“说”，除了在 <a href="#3.11" class="lyref">3.11</a> <span class="lyq">禘之说……知其说者</span>中指道理、说法，在 <a href="#3.21" class="lyref">3.21</a> <span class="lyq">成事不说</span>，<a href="#12.8" class="lyref">12.8</a> <span class="lyq">惜乎，夫子之说君子也</span>，<a href="#17.14" class="lyref">17.14</a> <span class="lyq">道听而涂说</span>中指讲述、评论以外，其它都通“悦”。<span class="lyseealso"><span>【参】</span><span><a href="#15.31" class="lyref">15.31</a> </span></span></p>
+<p><span class="lyterm">不亦（<span class="lypinyin">yì</span>）说（<span class="lypinyin">yuè</span>）乎</span>。<a id="yue4"></a><span class="lyterm">说</span>：通“悦”，快乐，喜悦。《论语》中所有的“说”，除了在 <a href="#3.11" class="lyref">3.11</a> <span class="lyq">禘之说……知其说者</span>中指道理、说法，在 <a href="#3.21" class="lyref">3.21</a> <span class="lyq">成事不说</span>，<a href="#12.8" class="lyref">12.8</a> <span class="lyq">惜乎，夫子之说君子也</span>，<a href="#17.14" class="lyref">17.14</a> <span class="lyq">道听而涂说</span>中指讲述、评论以外，其它都通“悦”。<span class="lyseealso"><span>【参】</span><span><a href="#15.31" class="lyref">15.31</a> </span></span></p>
 <p><a id="buyi"></a><span class="lyterm">亦</span>：也。<span class="lyterm">不亦……乎</span>构成反问句，字面上是说“不也怎样怎样吗”，实际是用委婉的形式表达自己的观点主张，相当于“应该就是怎样怎样的”。这跟现代汉语也常用的“何不”，英语中“Why not + 动作”表示建议怎样做的结构，都有共通之处。</p>
 </li>
 <li>
@@ -1073,18 +1073,21 @@ img.characterimg {
 <a id="2.16"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#2.16">2.16</a></div>
 <div class="lybloboriginaltext"><p>子曰：“攻乎异端，斯害也已。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize">
+<div class="lyblobannotation">
+<ul class="lyblobitemize">
 <li>
 <p><span class="lyterm">攻乎异端</span>：费心劳神于杂学。<span class="lyterm">攻</span>：治，专心从事。<span class="lyexample"><span>【例】</span><span>《诗经·大雅·灵台》：<span class="lyq">经始灵台，经之营之。庶民攻之，不日成之。</span></span></span></p>
 <p>也有认为“攻”表示言辞上的攻击，批判，依据是《论语》中的另外两例：<a href="#11.17" class="lyref">11.17</a> <span class="lyq">鸣鼓而攻之</span>，<a href="#12.21" class="lyref">12.21</a> <span class="lyq">攻其恶，无攻人之恶</span>，都是这个意思。尊重和包容异议，的确契合现代精神，但当时私学方起，百家待兴，未必有争鸣的条件，前一个解释更符合《论语》的整体观念。</p>
-<p><span class="lyterm">异端</span>：跟自己不是一头儿的，从孔子的角度，也就是与仁礼大道的宗旨不同的小道、杂学。孔子并不反对娱乐爱好：<a href="#17.22" class="lyref">17.22</a> <span class="lyq">不有博弈者乎？为之犹贤乎已。</span>而是希望珍惜光阴，分清主次：<a href="#15.20" class="lyref">15.20</a> <span class="lyq">君子疾没世而名不称焉。</span><a href="#19.4" class="lyref">19.4</a> <span class="lyq">致远恐泥，是以君子不为也。</span></p>
+<p><span class="lyterm">异端</span>：跟自己不是一头儿的，从孔子的角度，也就是与仁礼大道的宗旨不同的小道、杂学。孔子并不反对娱乐爱好：<a href="#17.22" class="lyref">17.22</a> <span class="lyq">不有博弈者乎？为之犹贤乎已。</span>而是希望珍惜光阴，分清主次：<a href="#15.20" class="lyref">15.20</a> <span class="lyq">君子疾没世而名不称焉</span>，<a href="#19.4" class="lyref">19.4</a> <span class="lyq">致远恐泥，是以君子不为也。</span></p>
 <p>也许是受“攻”的影响，这个词后来有了强烈的对抗性，相当于歪门邪道。称别人为异端的，常隐含认为自己才算正统、真理。</p>
 </li>
 <li>
 <p><span class="lyterm">斯害<a href="#yeyi">也已</a></span>：这就有害了。<span class="lyterm">斯</span>：代词，用作判断句的主语，指代前句所述情况，这（就），这（是）。<span class="lyexample"><span>【例】</span><span><a href="#4.7" class="lyref">4.7</a> <span class="lyq">观过，斯知仁矣。</span></span></span><span class="lyseealso"><span>【参】</span><span>近代崔适《论语足征记》：<span class="lyq">北齐颜之推《颜氏家训·省事篇》：“古人云多为少善，不如执一。……”多能乃圣人之事，常人而务多能，必至一无所能。……多为少善者，攻异端之害也。</span></span></span></p>
 <p>也有认为这里“已”是动词，停止，例如 <a href="#17.22" class="lyref">17.22</a> <span class="lyq">为之犹贤乎已</span>，这样句意就反过来了。《论语》包含16处“也已”，仅 <a href="#17.5" class="lyref">17.5</a> <span class="lyq">末之也已</span>用于句中表示让步，另外14处都用于句末表示判断，和本章句式相同的有 <a href="#9.23" class="lyref">9.23</a> <span class="lyq">斯亦不足畏也已</span>、<a href="#17.26" class="lyref">17.26</a> <span class="lyq">其终也已</span>，故不采信。</p>
 </li>
-</ul></div>
+</ul>
+<p><span class="lyseealso"><span>【参】</span><span>包容异见的理念，可参考《孟子·尽心上》：<span class="lyq"><a href="#yunzhiqizhong">执中</a>无<a href="#quan2">权</a>，犹执一也。所恶执一者，为其<a href="#zei2">贼</a>道也，举一而废百也。</span>西晋太康元年（280年），汲郡（在今河南省卫辉市）出土《竹书纪年》，部分内容与正史迥异，当时杜预在《左传》后序中评价：<span class="lyq">虽不皆与《史记》、《尚书》同，然参而求之，可以端正学者。</span></span></span></p>
+</div>
 </div>
 <a id="2.17"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#2.17">2.17</a></div>
@@ -2089,7 +2092,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“巧言、令色、足恭，左丘明耻之，丘亦耻之。匿怨而友其人，左丘明耻之，丘亦耻之。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="zugong"></a><span class="lyterm">足恭</span>：指过分恭顺，即谄媚巴结。</p></li>
-<li><p><span class="lyterm">左丘明</span>：春秋末期鲁国史官，与孔子同时稍晚，生平不详。据《汉书·司马迁传》，他是《左传》的作者、《国语》的编纂者。按司马迁《报任安书》的说法，他在编纂《国语》时已经失明了。据《汉书·刘歆传》，<span class="lyq">歆以为左丘明好恶与圣人同，亲见夫子</span>，也许是根据本章的附会。</p></li>
+<li><p><span class="lyterm">左丘明</span>：春秋末期鲁国史官，一般认为与孔子同时稍晚，生平不详。据《汉书·司马迁传》，他是《左传》和《国语》的作者：<span class="lyq">及孔子因鲁史记而作《春秋》，而左丘明论辑其本事以为之传，又籑异同为《国语》。</span>（籑（<span class="lypinyin">zhuàn</span>）：颜师古注：<span class="lyq">与“撰”同。</span>）按司马迁《报任安书》的说法，他在编纂《国语》时已经失明了。而《汉书·刘歆传》说，<span class="lyq">歆以为左丘明好恶与圣人同，亲见夫子</span>，也许是根据本章的附会。</p></li>
 <li><p><a id="chenghu"></a><span class="lyterm">丘</span>：孔子的自称。古代言谈中自称己名，表示谦逊。父对子、师对徒，也常直呼其名。但直称长辈或平辈的名是不礼貌的，至少很不正式（平辈的情况），正式应该称对方的字（<span class="lykeyword">表字</span>，常与名的意义相关）。唐宋起又流行用号（<span class="lykeyword">别号</span>），可以有不止一个，可以自拟或受赠，较为风雅。注意观察《论语》中不同关系、不同环境的称呼，容易理解礼仪上的区别。<span class="lyexample"><span>【例】</span><span>诸葛亮《前出师表》：<span class="lyq">臣亮言：先帝创业未半而中道<a href="#hong1">崩</a>殂……</span>（殂（<span class="lypinyin">cú</span>）：死。）</span></span><span class="lyseealso"><span>【参】</span><span>《礼记·檀弓上》：<span class="lyq">幼名，冠字，五十以伯仲，死谥，周道也。</span>《颜氏家训·风操》：<span class="lyq">古者，名以正体，字以表德，名终则讳之，字乃可以为孙氏。</span></span></span></p></li>
 </ul></div>
 </div>
@@ -3730,7 +3733,7 @@ img.characterimg {
 <p><span class="lyterm">色斯举矣，翔而后集</span>。本章疑有脱漏，难以确解。场景大概是，孔子和学生们经过一座山，看到一群<span class="lyterm">雉</span>（<span class="lypinyin">zhì</span>，野山鸡），孔子刚动了动表情没等说话，它们就敏感地飞上天，盘旋了一会才停聚到远处的山脊。<span class="lyterm">斯</span>：无意义的衬字。</p>
 <p><span class="lyseealso"><span>【参】</span><span>《论语注疏》解释为：<span class="lyq">见颜色不善则去之……回翔<a href="#shen3">审</a>观而后下止。</span>《四书集注》进一步说：<span class="lyq">人之见<a href="#ji1b">几</a>而作，审择所处，亦当如此。</span>《韩诗外传》卷二第21章，引用这句话来评价<a href="#jieyu">接舆</a>之妻的敏锐。天下无道，接舆躬耕以食，楚王派使者重金聘他为官，接舆笑而不应。其妻从市集回来后问：<span class="lyq">先生少而为义，岂将老而遗之哉？门外车轶何其深也？</span>（轶（<span class="lypinyin">zhé</span>）：通“辙”，车轮印。）于是一起隐居避世。<span class="lyq">《论语》曰：“色斯举矣，翔而后集。”接舆之妻是也。</span></span></span></p>
 <p>后来，“色斯”就代指离去、隐遁。<span class="lyexample"><span>【例】</span><span>《三国志·魏书·崔琰（<span class="lypinyin">yǎn</span>）传》：<span class="lyq">哲人君子，俄有色斯之志。</span>（俄：瞬间，顿时。）</span></span>“翔而后集”形容名人贤士的动向招来众多追随者，又指学问上博览详察，综合采纳。<span class="lyexample"><span>【例】</span><span>《三国志·魏书·和洽传》裴松之注引《汝南先贤传》说，东汉末年名士许劭屡征不就，<span class="lyq">避乱江南，所历之国，必翔而后集。</span>唐代杜淹《文中子世家》载，文中子王通之父曾教诲他：<span class="lyq">“自天子至庶人，未有不<a href="#zi1a">资</a>友而成者也。……小子勉旃，翔而后集。”</span>于是王通求学四方，<span class="lyq">不解衣者六岁，其精志如此。</span>（旃（<span class="lypinyin">zhān</span>）：之，焉。）</span></span></p>
-<p><a id="jiandu"></a>从周朝到东汉发明造纸术以前，古代书籍多是将文字纵向写或刻在竹片、木片上，再用线绳、皮绳横联起来。只容一竖行的窄竹片称为<span class="lykeyword">简</span>，能多写几行的木片称为<span class="lykeyword">牍</span>，所用的绳称为<span class="lykeyword">编</span>。编成一串作为单元的简牍称为<span class="lykeyword">篇</span>或<span class="lykeyword">编</span>（也叫<span class="lykeyword"><a href="#ce4a">策</a></span>或<span class="lykeyword">册</span>），绑成一捆收藏（更宽一些的木片称为<span class="lykeyword">方</span>，可以单独使用）。一篇包含若干<span class="lykeyword">章</span>，是按内容划分的，相当于<a href="#shijing">诗乐</a>的一节，有些是作者自己标明，有些是后人点断，如《论语》。这样的书写系统很不方便，成语“连篇累牍”就是嫌人文章写得太长。由于制作保管不易，各篇首尾容易错乱混杂，相似的情况还有 <a href="#16.12" class="lyref">16.12</a> <a href="#16.14" class="lyref">16.14</a> <a href="#20.1" class="lyref">20.1</a> 。随着4世纪纸的普及，纸抄本代替了简牍，能比较轻松地卷（<span class="lypinyin">juǎn</span>）持于手，<span class="lykeyword">卷</span>（<span class="lypinyin">juàn</span>）也取代篇成为新的单元了。</p>
+<p><a id="jiandu"></a>从周朝到东汉发明造纸术以前，古代书籍多是将文字纵向刻或写在竹片、木片上，再用皮绳、丝线横联起来。较窄的竹木片称为<span class="lykeyword">简</span>，能多写几竖行的称为<span class="lykeyword">牍</span>，所用的绳线称为<span class="lykeyword">编</span>。编成一串作为单元的简牍称为<span class="lykeyword">篇</span>或<span class="lykeyword">编</span>（也叫<span class="lykeyword"><a href="#ce4a">策</a></span>或<span class="lykeyword">册</span>），绑成一捆收藏（更宽一些的木片称为<span class="lykeyword">方</span>，可以单独使用）。一篇包含若干<span class="lykeyword">章</span>，是按内容划分的，相当于<a href="#shijing">诗乐</a>的一节，有些是作者标明，有些是后人点断，如《论语》。这样的书写系统很不方便，成语“连篇累牍”就是嫌人文章写得太长。由于制作保管不易，各篇首尾容易错乱混杂，相似的情况如 <a href="#16.12" class="lyref">16.12</a> <a href="#16.14" class="lyref">16.14</a> <a href="#20.1" class="lyref">20.1</a> 。春秋至汉代还有用墨写在丝帛上的<span class="lykeyword">帛书</span>，容字较多，可以加轴卷藏，经久不坏，但成本高昂，“竹帛”也成为书籍史册的代称。随着4世纪纸的普及，纸抄本代替了简牍，能比较轻松地卷（<span class="lypinyin">juǎn</span>）持于手，<span class="lykeyword">卷</span>（<span class="lypinyin">juàn</span>）就取代篇成为新的单元了。</p>
 </li>
 <li><p><span class="lyterm">时哉时哉</span>的感慨，可能是孔子自叹不遇其时，或者无法与世推移。<span class="lyseealso"><span>【参】</span><span><a href="#14.3" class="lyref">14.3</a> <a href="#16.11" class="lyref">16.11</a> </span></span></p></li>
 <li><p><span class="lyterm">共</span>（<span class="lypinyin">gǒng</span>）：通“拱”，拱手。也有说通“供”，指拿食物给它们吃，但结合第一句看似难说通。《吕氏春秋·季秋纪·审己》开头有<span class="lyq">子路掩雉而复释之</span>（掩：突袭式捕捉）的记载，或许和本章情节有关。</p></li>
@@ -6404,7 +6407,7 @@ img.characterimg {
 <li><p><span class="lyterm">咨</span>：句首叹词，表示感叹、称赞等语气，相当于啊、唉。后来“咨尔”成为独立的句首语气词，表示赞叹或祈使。<span class="lyexample"><span>【例】</span><span>《诗经·大雅·荡》：<span class="lyq"><a href="#wen">文王</a>曰：咨！咨女<a href="#shangchao">殷商</a>！</span>《中华民国国歌》：<span class="lyq">咨尔多士，为民前锋。</span></span></span></p></li>
 <li><p><a id="lishu"></a><span class="lyterm">历数</span>：历代帝王的在位年限与更替次序，古代相信这是<a href="#tianming">天意</a>注定的，<span class="lyq">犹岁时气节之先后也</span>（《四书集注》）。</p></li>
 <li>
-<p><span class="lyterm">允执其中</span>：诚守那中正之道吧。<span class="lyterm">允</span>：诚信。<span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq">子曰：“舜其大知也与！舜好问而好察迩言，隐恶而扬善，执其两端，用其中于民，其斯以为舜乎！”</span></span></span></p>
+<p><a id="yunzhiqizhong"></a><span class="lyterm">允执其中</span>：诚守那中正之道吧。<span class="lyterm">允</span>：诚信。<span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq">子曰：“舜其大知也与！舜好问而好察迩言，隐恶而扬善，执其两端，用其中于民，其斯以为舜乎！”</span></span></span></p>
 <p><span class="lyterm">四海<a href="#kun4">困</a><a href="#qiong2">穷</a>，天禄永终</span>，是假如不这样做的警告。<span class="lyterm">天禄</span>特指帝位，<span class="lyterm">终</span>指断绝。<span class="lyseealso"><span>【参】</span><span>《韩诗外传》第2卷第12章，颜回借御马之道表达了苛政穷民之力的不可取：<span class="lyq">舜不穷其民，造父不穷其马。是以舜无<a href="#yimina">佚民</a>，造父无佚马也。……兽穷则啮，鸟穷则啄，人穷则诈。自古及今，穷其下而能不危者，未之有也。</span>（穷：指耗尽其力。造父：著名的善御者。）</span></span></p>
 <p>古注中常见的另一种解释是，终指极尽，永终指久远绵长，后半句是<a href="#shanrang">禅让</a>之际的吉祥祝愿，前半句则是告诫：应当以此为念。分歧在于，如依前说，终为end，永则显冗余；如依后说，永、终并列，又难承接“四海困穷”，只好平添“为念”。结果是，后半句常见于历代“禅位书”，但用法并不统一，后来“永终”也同时有了这两种含义。<span class="lyexample"><span>【例】</span><span>《三国志·魏书·文帝纪》载，220年，汉献帝禅位于魏王曹丕，<span class="lyq">册曰：“咨尔魏王！昔者帝尧禅位于虞舜，舜亦以命禹。天命不于常，惟归有德。……用率我<a href="#yao">唐</a>典，敬逊尔位。於戏！天之历数在尔躬，允执其中，天禄永终。……”</span>（<a href="#wu1a">於</a>戏（<span class="lypinyin">hū</span>）：叹词，呜呼。）《三国志·魏书·明帝纪》裴松之注引《献帝传》，写献帝去世后：<span class="lyq">帝变<a href="#wufu">服</a>，……诏曰：“……山阳公深识天禄永终之运，禅位文皇帝以顺天命。”</span>（帝：魏明帝曹睿，曹丕长子。山阳公：汉献帝退位后的封号。文皇帝：曹丕。）明代神魔小说《封神演义》第2回：<span class="lyq">臣闻人君修德勤政，则万民悦服，四海景从，天禄永终。</span>（景：通“影”。）</span></span></p>
 </li>
@@ -6424,7 +6427,7 @@ img.characterimg {
 <li><p><span class="lyterm"><a href="#zhou1a">周</a>亲</span>：至亲。<span class="lyterm">虽有周亲</span>句是<a href="#wu">周武王</a>说的，见于《尚书·周书·泰誓中》（伪），是<a href="#wu">周武王</a>出兵伐<a href="#zhou">纣</a>的誓师词。本句接在<span class="lyq">予有<a href="#luanchen">乱臣</a>十人，同心同德</span>之后。<span class="lyterm">百姓有过</span>之前还有：<a id="tianshitianting"></a><span class="lyq">天视自我民视，天听自我民听。</span></p></li>
 <li><p><span class="lyterm">谨权量（<span class="lypinyin">liáng</span>），审法度，修废官</span>：严谨明细地制定度量衡标准，整顿恢复荒废的职能部门。<span class="lyterm">权量</span>：称重量与测体积的工具，代指度量衡标准。<span class="lyterm">法度</span>也指度量衡，而非法律制度。<span class="lyseealso"><span>【参】</span><span>《汉书·律历志》引用了这句话，认为是<span class="lyq">周衰<a href="#shiguan">官失</a>，孔子陈<a href="#xianwang">后王</a>之法。</span>颜师古《律历志》注：<span class="lyq">权，谓斤两也；量，斗<a href="#hu2">斛</a>也；法度，丈尺也。</span></span></span></p></li>
 <li><p><span class="lyterm">兴灭国，继绝世，举逸民</span>：振救重建已遭倾覆的邦国，接续沿袭断绝禄位的世家，征举任用避世隐居的贤人。<span class="lyseealso"><span>【参】</span><span>《中庸》：<span class="lyq">继绝世，举废国，治乱持危，朝聘以时，厚往而薄来，所以<a href="#huai2">怀</a>诸侯也。</span></span></span></p></li>
-<li><p><span class="lyterm">说</span>：民悦。</p></li>
+<li><p><span class="lyterm"><a href="#yue4">说</a></span>：民悦。</p></li>
 </ul>
 </div>
 </div>
